<resources>
    <string name="app_name">project_final</string>

    <!-- FirstActivity String Collection -->
    <string name="welcomeMessage">TextView</string>
    <string name="idText">아이디</string>
    <string name="passwordText">TextView</string>
    <string name="idText2">TextView</string>
    <string name="textView2">비밀번호</string>

    <!-- LoginActivity String Collection -->
    <string name="loginIdText">ID</string>
    <string name="nologin">로그인없이 돌아다녀보기</string>
    <string name="loginButton">로그인</string>
    <string name="loginPasswordText">password</string>
    <string name="loginRegisterButton">회원가입</string>
    <string name="text">로그인</string>

    <!-- MainActivity String Collection -->
    <string name="btn_first">오늘 하루</string>
    <string name="btn_second">위치</string>
    <string name="btn_third">게시판</string>

    <!-- RegisterActivity String Collection -->
    <string name="address">address</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="number">number</string>
    <string name="email">email</string>
    <string name="auth">auth</string>
    <string name="birth">birth</string>
    <string name="password">password</string>
    <string name="cname">cname</string>
    <string name="registerButton">회원가입</string>
    <string name="confirmButton">확인</string>
    <string name="authButton">인증</string>
    <string name="authCanButton">취소</string>

    <!-- Tab2Activity String Collection -->
    <string name="restaurant">식사</string>
    <string name="atm">ATM</string>
    <string name="busStation">정류장</string>
    <string name="cafe">카페</string>
    <string name="convenienceStore">편의점</string>

    <!-- WriteActivity String Collection -->
    <string name="activityName">글쓰기</string>
    <string name="title">제목</string>
    <string name="subtitle">소제목</string>
    <string name="content">내용을 입력하세요.</string>
    <string name="purchaseList">목록 보기</string>
</resources>
