<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="35dp"
    android:layout_marginVertical="50dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!--
    <Button
        android:id="@+id/nologin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nologin"
        android:background="@drawable/round_button_01"
        android:layout_margin="5dp" />
        -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/title"
        android:layout_margin="5dp" />

    <EditText
        android:id="@+id/loginActivity_edittext_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/loginIdText"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/loginActivity_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/loginPasswordText"
        android:inputType="textPassword"
        android:layout_marginBottom="5dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginActivity_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:background="@drawable/round_button_01"
        tools:ignore="MissingConstraints"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/loginActivity_button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="회원가입"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            tools:ignore="MissingConstraints"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="비밀번호찾기"
            android:textAlignment="center"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>