<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="WriteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/re1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/closeButton"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:background="#00ff0000"
                    android:maxWidth="20dp"
                    android:maxHeight="20dp"
                    android:src="@drawable/icon_close" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/activityName"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/writesaveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="3dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:background="#00ff0000"
                    android:maxWidth="25dp"
                    android:maxHeight="25dp"
                    android:src="@drawable/icon_ok" />

            </RelativeLayout>

            <View
                android:id="@+id/bodyline1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#d3d0d0" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/title"
                    android:inputType="text" />


                <View
                    android:id="@+id/bodyline2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/title"
                    android:layout_marginTop="8dp"
                    android:background="#d3d0d0" />


                <EditText
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bodyline2"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/subtitle"
                    android:inputType="text" />


                <View
                    android:id="@+id/bodyline3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/subtitle"
                    android:layout_marginTop="8dp"
                    android:background="#d3d0d0" />

                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bodyline3"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/content"
                    android:inputType="textMultiLine" />


            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#d3d0d0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/photoButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerInside"
            android:background="#00ff0000"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_photo"
            android:onClick="loadImagefromGallery"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />




    </LinearLayout>

</LinearLayout>