<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn3_first"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColorPrimary"
            android:text="@string/btn_first"/>
        <Button
            android:id="@+id/btn3_second"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:textColor="@color/textColorPrimary"
            android:text="@string/btn_second"/>
        <Button
            android:id="@+id/btn3_third"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@color/background"
            android:textColor="@color/textColorPrimary"
            android:text="@string/btn_third"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <ImageButton
            android:id="@+id/writeButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerInside"
            android:background="#00ff0000"
            android:src="@drawable/icon_write"/>

        <ImageButton
            android:id="@+id/myButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerInside"
            android:gravity="right"
            android:background="#00ff0000"
            app:srcCompat="@drawable/mypage" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="공지"
            android:textAlignment="center" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/noticeButton"
            android:layout_width="50dp"
            android:layout_height="19dp"
            android:layout_gravity="right"
            android:background="#00ff0000"
            android:text="더보기" />

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/layout" />


    <GridLayout

        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:columnCount="2"
        android:rowCount="2">

        <Button
            android:id="@+id/purchaseButton"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_button_03"
            android:text="공동구매" />

        <Button
            android:id="@+id/foodButton"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:background="@drawable/round_button_03"
            android:text="음식배달" />

        <Button
            android:id="@+id/roomButton"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_button_03"
            android:text="단기 방대여" />

        <Button
            android:id="@+id/hobbyButton"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button_03"
            android:text="취미공유" />


    </GridLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="자유게시판"
            android:textAlignment="center" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/freeButton"
            android:layout_width="50dp"
            android:layout_height="19dp"
            android:layout_gravity="right"
            android:background="#00ff0000"
            android:text="더보기" />

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/layout" />


</LinearLayout>
